<?xml version="1.0"?>
<package>
  <name>rqt_rosplot</name>
  <version>0.0.0</version>
  <description>Plot package with working autocomplete</description>
  <maintainer email="fly.fontana@gmail.com">Flavio Fontana</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
